--- a/test.html
+++ b/test.html
@@ -1,11 +1,12 @@
 <div>
     <h1>Start a Game?</h1>
-    <input type="text" placeholder="Name the Event"></input>
+    <input type="text" placeholder="Name the Event" id="eventTitle"></input>
+    <!-- event photo input -->
     <form action="/action_page.php">
         <input type="file" id="eventPic" name="eventPic">
         <p>Choose Event Photo</p>
     </form>
-    <!-- Dropdown Menu for Game Choices -->
+    <!-- dropdown menu for game choices -->
     <label for="game-choices">Choose a Game:</label>
     <select name="game-choices" id="game-choices">
         <option value="game1">Game 1</option>
@@ -13,4 +14,22 @@
         <option value="game3">Game 3</option>
         <option value="na">N/A</option>
     </select>
+    <input type="text" placeholder="Add Custom Game" id="gameCustomChoice"></input>
+    <input type="text" placeholder="Event Description" id="eventDescription"></input>
+    <input type="text" placeholder="Add Notes (Example: BYOB)" id="eventNotes"></input>
+    <!-- Calendar for choosing the date -->
+    <fieldset id="eventDate">
+        <legend>Pick the Date</legend>
+        <label for="eventDate">
+            <input id="eventDate"type="date" min="2023-02-01">
+        </label>
+    </fieldset>
+    <fieldset id="eventTime">
+        <legend>Pick the Time</legend>
+        <label for="eventTime">
+            <input id="eventTime"type="time">
+        </label>
+    </fieldset>
+
+
 </div>
